--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MyUnitTestPracticeApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.MyUnitTestPracticeApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_200</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -12,5 +12,12 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+
+        <item name="android:textViewStyle">@style/PoppinsTextStyle</item>
+    </style>
+
+    <style name="PoppinsTextStyle" parent="android:Widget.TextView">
+        <item name="fontFamily">@font/poppins_regular</item>
+        <item name="android:textColor">@android:color/white</item>
     </style>
 </resources>
