--- a/app/src/main/res/layout/fragment_shopping.xml
+++ b/app/src/main/res/layout/fragment_shopping.xml
@@ -6,7 +6,7 @@
     android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MainActivity">
+    tools:context=".MainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clShoppingItems"
@@ -43,6 +43,7 @@
         app:backgroundTint="@color/colorAccent"
         app:fabSize="normal"
         app:layout_anchorGravity="bottom|right|end"
-        app:layout_anchor="@id/clShoppingItems" />
+        app:layout_anchor="@id/clShoppingItems"
+        android:contentDescription="TODO" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
